
[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v1.12.0...master[View commits]

- Prefer w3c traceparent header over legacy elastic-apm-traceparent {pull}963[#(963)]
- Context.SetUsername now takes precedence over HTTP user info from Context.SetHTTPRequest {pull}973[#(973)]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.12.0]]
==== 1.12.0 - 2021/05/25

https://github.com/elastic/apm-agent-go/releases/tag/v1.12.0[View release]

- module/apmgrpc: fix status code to outcome mapping {pull}902[#(902)]
- module/apmawssdkgo: add support for instrumenting s3 RPC calls {pull}927[#(927)]
- module/apmawssdkgo: add support for instrumenting dynamodb RPC calls {pull}928[#(928)]
- SpanContext.SetDestinationService is a no-op if either Name or Resource is empty {pull}931[#(931)]
- module/apmawssdkgo: add support for instrumenting sqs RPC calls {pull}933[#(933)]
- module/apmawssdkgo: add support for instrumenting sns RPC calls {pull}938[#(938)]
- Parse "//" comments in SQL/CQL {pull}937[#(937)]
- Fix CaptureError to capture the request body when ELASTIC_APM_CAPTURE_BODY is enabled {pull}906[#(906)]
- module/apmgrpc: record underlying HTTP/2 context {pull}904[#(904)]
- module/apmot: handle http.host tag as url.Host {pull}954[#(954)]
- apm: add add ParentID methods to Span and Transaction {pull}956[#(956)]

[[release-notes-1.11.0]]
==== 1.11.0 - 2021/02/01

https://github.com/elastic/apm-agent-go/releases/tag/v1.11.0[View release]

- Make TRANSACTION_IGNORE_URLS dynamically configurable: {pull}872[#872]

[[release-notes-1.10.0]]
==== 1.10.0 - 2021/01/20

https://github.com/elastic/apm-agent-go/releases/tag/v1.10.0[View release]

- module/apmsql: add tracingDriver.Unwrap method to get underlying driver {pull}#849[#(849)]
- module/apmgopgv10: add support for github.com/go-pg/pg/v10 {pull}857[(#857)]